--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -57,33 +57,35 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block; }
 
 /* line 5, ../../sass/_base.scss */
-h1 {
-  font-size: 2.2rem;
-  color: #ef7e60; }
+#nav h1 {
+  color: #333; }
+/* line 8, ../../sass/_base.scss */
+#nav h3 {
+  color: #333; }
 
-/* line 10, ../../sass/_base.scss */
+/* line 13, ../../sass/_base.scss */
 i {
   font-style: italic; }
 
-/* line 14, ../../sass/_base.scss */
+/* line 17, ../../sass/_base.scss */
 .test {
   font-size: 1.2rem;
   color: #2176C7; }
 
-/* line 19, ../../sass/_base.scss */
+/* line 22, ../../sass/_base.scss */
 .show-image {
   max-height: 100%;
   max-width: 100%; }
 
-/* line 24, ../../sass/_base.scss */
+/* line 27, ../../sass/_base.scss */
 .childComment {
   padding-left: 40px; }
 
-/* line 28, ../../sass/_base.scss */
+/* line 31, ../../sass/_base.scss */
 .episode-list-item {
   display: inline-block; }
 
-/* line 32, ../../sass/_base.scss */
+/* line 35, ../../sass/_base.scss */
 .home-header-image {
   -webkit-transition: all 0.7s;
   -moz-transition: all 0.7s;
@@ -96,44 +98,44 @@ i {
   padding: 25px;
   color: #ffffff;
   background-position: center; }
-  /* line 42, ../../sass/_base.scss */
+  /* line 45, ../../sass/_base.scss */
   .home-header-image h1 {
     font-size: 8vmax;
     color: #ffffff;
     font-weight: 700;
     text-shadow: 1px 1px rgba(30, 30, 30, 0.3); }
-  /* line 49, ../../sass/_base.scss */
+  /* line 52, ../../sass/_base.scss */
   .home-header-image h2 {
     text-shadow: 2px 2px rgba(30, 30, 30, 0.3); }
-  /* line 52, ../../sass/_base.scss */
+  /* line 55, ../../sass/_base.scss */
   .home-header-image h3 {
     text-shadow: 2px 2px rgba(30, 30, 30, 0.3); }
 
-/* line 57, ../../sass/_base.scss */
+/* line 60, ../../sass/_base.scss */
 .show-header {
   background-color: #eee;
   padding: 15px 0px;
   margin-top: 10px;
   margin-bottom: 15px; }
-  /* line 63, ../../sass/_base.scss */
+  /* line 66, ../../sass/_base.scss */
   .show-header h1 {
     margin-top: 0px; }
-  /* line 67, ../../sass/_base.scss */
+  /* line 70, ../../sass/_base.scss */
   .show-header hr {
     border-color: #DBDBDB; }
 
-/* line 72, ../../sass/_base.scss */
+/* line 75, ../../sass/_base.scss */
 .episode-textarea {
   margin-top: 10px;
   margin-bottom: 5px; }
 
-/* line 77, ../../sass/_base.scss */
+/* line 80, ../../sass/_base.scss */
 .comment-parent {
   background-color: rgba(232, 232, 232, 0.3);
   padding: 10px 10px;
   margin-top: 15px; }
 
-/* line 83, ../../sass/_base.scss */
+/* line 86, ../../sass/_base.scss */
 .comment-child {
   margin-top: 10px;
   margin-left: 50px;
@@ -141,34 +143,42 @@ i {
   padding: 10px 10px;
   background-color: rgba(216, 216, 216, 0.3); }
 
-/* line 92, ../../sass/_base.scss */
+/* line 95, ../../sass/_base.scss */
 .comment-user {
   background-color: rgba(216, 216, 216, 0.3);
   padding: 10px 10px;
   margin-top: 15px; }
 
-/* line 98, ../../sass/_base.scss */
+/* line 101, ../../sass/_base.scss */
 .button-vote {
   margin-top: 5px;
   font-size: 2em;
   color: #646464; }
 
-/* line 104, ../../sass/_base.scss */
+/* line 107, ../../sass/_base.scss */
 .button-vote:hover {
   color: #3f3f3f; }
 
-/* line 108, ../../sass/_base.scss */
+/* line 111, ../../sass/_base.scss */
 .button-upvoted {
   color: #f0592c; }
 
-/* line 112, ../../sass/_base.scss */
+/* line 115, ../../sass/_base.scss */
 .button-upvoted:hover {
   color: #f0592c; }
 
-/* line 116, ../../sass/_base.scss */
+/* line 119, ../../sass/_base.scss */
 .button-downvoted {
   color: #00b3ee; }
 
-/* line 120, ../../sass/_base.scss */
+/* line 123, ../../sass/_base.scss */
 .button-downvoted:hover {
   color: #00b3ee; }
+
+/* line 127, ../../sass/_base.scss */
+.display-inline-block {
+  display: inline-block; }
+
+/* line 131, ../../sass/_base.scss */
+.red-text {
+  color: #ff0000; }
