--- a/public/partials/profile_comments.html
+++ b/public/partials/profile_comments.html
@@ -69,7 +69,7 @@
                                 <div class="media-body media-middle">
                                     <div>{{comment.text}}</div>
                                     <h6>{{comment.post_time}}</h6>
-                                    <a href="#/episode/{{comment.episode_id}}"><h6>View - <i>{{comment.show_name}} ('{{comment.episode_name}}')</i></h6></a>
+                                    <a href="#/episode/{{comment.episode_id}}/c{{comment._id}}"><h6>View - <i>{{comment.show_name}} ('{{comment.episode_name}}')</i></h6></a>
                                 </div>
                             </div>
                         </div>
