--- a/public/partials/show.html
+++ b/public/partials/show.html
@@ -2,7 +2,7 @@
 <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-xs-12">
 
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -30,7 +30,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a ng-show="profile" href="#/profile/{{user._id}}"><span class="glyphicon glyphicon-user"></span> {{user.local.email}}</a></li>
 
-                        <li><a ng-click="logout()" ng-show="profile" ng-show="profile"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+                        <li><a ng-click="logout()" href="javascript:;" ng-show="profile"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
 
                         <li><a ng-show="!profile" href="#/login">Login</a></li>
                         <li><a ng-show="!profile" href="#/signup">Sign Up</a></li>
@@ -43,6 +43,7 @@
 </div>
 <!--NAV BAR END-->
 
+<div class="body-below-nav">
 <div class="row show-header">
 
     <div class="col-lg-2 col-lg-offset-2 col-md-4 col-md-offset-1 col-sm-4 col-xs-12">
@@ -90,6 +91,5 @@
         </div>
 
     </div>
-</div>
 </div>
 </div>
