--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -72,6 +72,10 @@ i {
   }
 }
 
+.episode-list-item {
+  display: inline-block;
+}
+
 .episode-textarea {
   margin-top: 10px;
   margin-bottom: 5px;
