--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -63,6 +63,16 @@
         <input class="form-control" ng-model="query" type="text" placeholder="TV Show Name">
 
         <hr>
+
+        <h3>Order By</h3>
+        <select id="sorting" ng-model="sorting" class="form-control">
+            <option value="name">A-Z</option>
+            <option value="-last_date">Last Air Date</option>
+            <option value="-imdb_rating">IMDB Rating</option>
+        </select>
+
+        <hr>
+
         <div class="visible-md-block visible-lg-block">
             <h3>Genres</h3>
             <ul class="list-group">
@@ -100,7 +110,7 @@
         <div class="row">
 
             <div class="block-grid-xs-2 block-grid-sm-3">
-                <div class="block-grid-item" ng-repeat="show in shows | filter:search | filter:{name: query}">
+                <div class="block-grid-item" ng-repeat="show in shows | filter:search | filter:{name: query} | orderBy: sorting">
                     <div class="thumbnail">
                         <a href="#/show/{{show._id}}"><img ng-src="./data/images/{{show.img_filename}}"></a>
                         <div class="caption">
