Small visual changes

--- a/public/partials/episode.html
+++ b/public/partials/episode.html
@@ -84,7 +84,7 @@
         </div>
 
 
-        <div class="input-group">
+        <div class="input-group" ng-show="comments.length !== 0">
             <label for="sorting">Order By</label>
             <select id="sorting" ng-model="sorting" class="form-control">
                 <option value="points">Points</option>
