--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -113,7 +113,7 @@ i {
 
 /* line 60, ../../sass/_base.scss */
 .show-header {
-  background-color: #eee;
+  background-color: #f4f4f4;
   padding: 15px 0px;
   margin-top: 10px;
   margin-bottom: 15px; }
@@ -185,4 +185,17 @@ i {
 
 /* line 135, ../../sass/_base.scss */
 .red-text {
-  color: #ff0000; }
+  color: #d9534f; }
+
+/* line 139, ../../sass/_base.scss */
+.no-comments-text {
+  color: #CFCFCF; }
+
+/* line 143, ../../sass/_base.scss */
+.episode-header {
+  padding: 15px 0px;
+  margin-top: 10px;
+  margin-bottom: 15px; }
+  /* line 148, ../../sass/_base.scss */
+  .episode-header h1 {
+    margin-top: 0px; }
