--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -58,7 +58,7 @@ i {
 }
 
 .show-header {
-  background-color: #eee;
+  background-color: #f4f4f4;
   padding: 15px 0px;
   margin-top: 10px;
   margin-bottom: 15px;
@@ -133,5 +133,19 @@ i {
 }
 
 .red-text {
-  color: #ff0000;
+  color: #d9534f;
+}
+
+.no-comments-text {
+  color: #CFCFCF;
+}
+
+.episode-header {
+  padding: 15px 0px;
+  margin-top: 10px;
+  margin-bottom: 15px;
+
+  h1{
+    margin-top: 0px;
+  }
 }
