Adding back button on episodes page, alert on voting when not logged in

--- a/public/partials/episode.html
+++ b/public/partials/episode.html
@@ -47,6 +47,7 @@
 <div class="row">
 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
 
+<h4><a href="#/show/{{show._id}}" class="btn btn-primary"><span class="glyphicon glyphicon-arrow-left"></span> All {{show.name}} Episodes</a></h4>
 <div class="row episode-header">
     <div class="col-sm-4">
         <img class="show-image" ng-show="!episode.img_filename" ng-src="{{episode.img_url}}"> <!-- Show the show image only if it has been loaded, otherwise display the episode image -->
